--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <title>About Me</title>
+  <script src="https://kit.fontawesome.com/13fca95e95.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -14,7 +15,10 @@
       <span class="logo">Rotimi..</span>
       <ul>
         <li class="nav-item"><a href="#">About Me</a></li>
-        <li class="nav-item"><a href="#">Contact Me</a></li>
+        <li class="nav-item"><a href="#goals">Goals</a></li>
+        <li class="nav-item"><a href="#edu-certs">Education & Certificates</a></li>
+        <li class="nav-item"><a href="#experience">Experience</a></li>
+        <li class="nav-item"><a href="#contact">Contact Me</a></li>
         <li class="nav-item"><a href="#">Login / Register</a></li>
       </ul>
     </nav>
@@ -32,7 +36,7 @@
         <img class="introduction-img" src="/images/IMG_20220520_104254_281-removebg-preview.png" alt="Rotimi's Image">
       </div>
     </section>
-    <section class="goals">
+    <section id="goals" class="goals">
       <div class="goals-header">
         <h2>My Goals for Altschool</h2>
       </div>
@@ -40,11 +44,108 @@
         <p><i class="fa-solid fa-angle-right"></i>  Learn ReactJS.</p>
         <p><i class="fa-solid fa-angle-right"></i>  Develop my problem solving skills</p>
         <p><i class="fa-solid fa-angle-right"></i>  Network with like minded individuals</p>
+        <p><i class="fa-solid fa-angle-right"></i>  Become a world -class Frontend Developer</p>
         <p><i class="fa-solid fa-angle-right"></i>  Start earning in $$$</p>
       </div>
     </section>
+    <section id="edu-certs" class="edu-cert">
+      <div class="education">
+        <h2>Education <i class="fa-solid fa-book-open"></i></h2>
+        <div class="card">
+          <img src="https://nigerianscholars.com/assets/uploads/2016/04/OOU-jpg-featured.jpg" alt="olabisi onabanjo university logo">
+          <p>Olabisi Onabanjo University</p>
+        </div>
+        <div class="card">
+          <img src="/images/mayflower.png" alt="Mayflower logo">
+          <p>Mayflower Secondary School</p>
+        </div>
+      </div>
+      <div class="certificates">
+        <h2>Certificates <i class="fa-solid fa-certificate"></i></h2>
+        <div class="card">
+          <a href="https://www.credly.com/badges/6fe4668f-9c5a-4cd7-a164-d48d243aabc3"><img src="https://images.credly.com/size/340x340/images/be8fcaeb-c769-4858-b567-ffaaa73ce8cf/image.png" alt=""></a>
+          <p>Azure Fundamentals: AZ900</p>
+        </div>
+      </div>
+    </section>
+    <section id="experience" class="experience">
+      <div class="experience-header">
+        <h2>My Job Experiences</h2>
+      </div>
+      <div class="experience-list">
+        <div class="experience-item">
+          <img src="/images/decasoft.jpg" alt="Decasoft Technologist logo">
+          <div>
+            <h3>IT Support Specialist / Frontend Developer</h3>
+            <p>Decasoft Technologist</p>
+            <p>Mar 2022 - Present</p>
+          </div>
+        </div>
+        <hr>
+        <div class="experience-item">
+          <img src="/images/lanepact.png" alt="Lanepact Logo">
+          <div>
+            <h3>Frontend Developer Apprentice</h3>
+            <p>Lanepact</p>
+            <p>Aug 2021 - Dec 2021</p>
+          </div>
+        </div>
+        <hr>
+        <div class="experience-item">
+          <img src="/images/munspring.webp" alt="mumspring logo">
+          <div>
+            <h3>IT Support Specialist</h3>
+            <p>Mumspring</p>
+            <p>Feb 2021 - Nov 2021</p>
+          </div>
+        </div>
+        <hr>
+        <div class="experience-item">
+          <img src="/images/tiidelab.jpg" alt="Tiidelab logo">
+          <div>
+            <h3>Frontend Developer Intern</h3>
+            <p>Tiidelab</p>
+            <p>Aug 2020 - Jan 2021</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="contact">
+      <div class="contact-header">
+        <h2>Send me message</h2>
+      </div>
+      <div class="contact-form">
+        <form action="">
+          <div class="form-item">
+            <label for="name">Full Name:</label>
+            <input type="text" name="name" id="name" placeholder="Enter your full name">
+          </div>
+          <div class="form-item">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="Enter your email">
+          </div>
+          <div class="form-item">
+            <label for="message">Message:</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          </div>
+          <div class="form-item">
+            <label for="priority">Priority:</label>
+            <select class="priority" name="priority" id="priority">
+              <option value="Urgent">Urgent</option>
+              <option value="High">High</option>
+              <option value="Low">Low</option>
+            </select>
+          </div>
+          <div class="form-item">
+            <button class="submit" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
   </main>
+  <footer>
+    <p>site authord by Adebiyi Rotimi &copy;</p>
+  </footer>
   <script src="script.js"></script>
-  <script src="https://kit.fontawesome.com/13fca95e95.js" crossorigin="anonymous"></script>
 </body>
 </html>
