--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="nav-item"><a href="#edu-certs">Education & Certificates</a></li>
         <li class="nav-item"><a href="#experience">Experience</a></li>
         <li class="nav-item"><a href="#contact">Contact Me</a></li>
-        <li class="nav-item"><a href="#">Login / Register</a></li>
+        <li class="nav-item"><a href="/auth.html">Login / Register</a></li>
       </ul>
     </nav>
   </header>
@@ -142,6 +142,7 @@
         </form>
       </div>
     </section>
+    <a class="calculator-redirect" target="_blank" href="calculator.html"> Goto Calculator <i class="fa-solid fa-arrow-right"></i></a>
   </main>
   <footer>
     <p>site authord by Adebiyi Rotimi &copy;</p>
